2015-12-08  Uros Bizjak  <ubizjak@gmail.com>

	* config/i386/i386.c (ix86_emit_swsqrtsf): Cleanup
	infinity filterning code.

2015-12-08  Ilya Enkovich  <enkovich.gnu@gmail.com>

	PR tree-optimization/68766
	* tree-vectorizer.c (vectorize_loops): Check for
	if-converted loops when debug counters are used.

2015-12-07  DJ Delorie  <dj@redhat.com>

	* config/rl78/constraints.md (Wfr): Change to be a non-memory
	constraint.
	* config/rl78/rl78-protos.h (rl78_one_far_p): Declare.
	* config/rl78/rl78.c (rl78_one_far_p): Define.
	* config/rl78/rl78-virt (movqi_virt): Fix far memory
	alternatives.
	(movhi_virt): Likewise.
	(zero_extendqihi2_virt): Likewise.
	(extendqihi2_virt): Likewise.
	(add<mode>3_virt): Likewise.
	(sub<mode>3_virt): Likewise.
	(andqi3_virt): Likewise.
	(iorqi3_virt): Likewise.
	(xorqi3_virt): Likewise.
	* config/rl78/rl78-real.md (bf,br): Use long forms to avoid reloc
	overflow in large files.

2015-12-07  Eric Botcazou  <ebotcazou@adacore.com>

	PR target/63668
	* doc/invoke.texi (SPARC options): Document -mstd-struct-return.
	* config/sparc/sparc.c (sparc_struct_value_rtx): Minor tweaks.
	* config/sparc/sparc.h (CALL_REALLY_USED_REGISTERS): Define.
	* config/sparc/sparc.opt (mstd-struct-return): Accept negative.

2015-12-07  Steve Ellcey  <sellcey@imgtec.com>

	* reorg.c (optimize_skip): Do not put frame related instructions
	in annulled delay slots.
	(steal_delay_list_from_target): Ditto.
	(fill_slots_from_thread): Ditto.

2015-12-07  Evandro Menezes  <e.menezes@samsung.com>

	* config/aarch64/aarch64-cores.def: Use the Exynos M1 sched model.
	* config/aarch64/aarch64.md: Include "exynos-m1.md".
	* config/arm/arm.md: Likewise.
	* config/arm/exynos-m1.md: New file.

2015-12-07  Jan Hubicka  <hubicka@ucw.cz>

	* fold-const.c (operand_equal_p): Drop flag_strict_aliasing check.

2015-12-07  Nathan Sidwell  <nathan@acm.org>

	* config//nvptx/nvptx.c (write_return): New.
	(write_fn_proto, nvptx_declare_function_name): Call it.
